# graphz

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.devcontainer/: devcontainer.json
crates/graphz-core/: Cargo.toml
crates/graphz-core/src/: a_search.rs  breath_first_search.rs  depth_first_search.rs  dijkstra_search.rs  edge.rs  graph.rs  graph_type.rs  lib.rs  node.rs  types.rs
crates/graphz-io/: Cargo.toml
crates/graphz-io/src/: reader.rs  writer.rs
examples/demo-graph/: Cargo.toml
examples/demo-graph/src/: main.rs
