[package]
name = "graphz-io"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
graphz-core = { workspace = true }

arrow = { workspace = true, features = ["ipc"] }
snafu = { workspace = true, features = ["std"] }
chrono = { workspace = true }

[lints]
workspace = true
